# safe-ai-util

./: .dockerignore  .gitignore  AUTOMATION_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MIGRATION_STATUS.md  README.md  TODO.md  analyze_issues_for_projects.py  assign_issues_to_projects_copilot-agent-util-rust.py  assign_to_existing_projects.py  build-cross-platform.sh  comprehensive_issue_automation.py  copilot-util-args  distribute-binaries.sh  final_project_assignments.py  github_mcp_automation.py  labeling_commands.txt  master_issue_inventory.json  test-args.txt  update_secure_execution.py
.cargo/: config.toml
.github/: dependabot.yml  semantic-release.config.json  super-linter.env  unified-automation-config.json  workflow-config.yaml
.github/instructions/: general-coding.instructions.md  rust-utility.instructions.md
.github/issue-updates/: 28f4faaf-7f10-43be-9423-b9d452377ced.json  db0e0733-eca5-461e-baf5-137df58f89c3.json
.github/linters/: .eslintrc.json  .markdownlint.json  .pylintrc  .stylelintrc.json  README.md  super-linter-ci.env
.github/prompts/: ai-rebase-context.md  ai-rebase-context.template.md  commit-message.prompt.md  pull-request.prompt.md
.github/scripts/: detect_languages.py  parse_config_json.py  run_buf_generate.py  super-linter-pr-comment.js
.github/workflows/: automatic-release.yml  ci.yml  docker.yml  intelligent-sync-to-repos.yml  pr-automation.yml  release-go.yml  release-javascript.yml  release.yml  (+23 more)
benches/: executor_benchmark.rs
docs/: README.md
scripts/: README-cleanup-tool.md  README-notifications.md  analyze_issue_duplicates.py  apply_comprehensive_labeling.py  clean_issue_processor.py  github_projects_manager.py  identify_gcommon_duplicates.py  populate_master_issue_inventory.py  process_issue_updates.py
src/: config.rs  error.rs  executor.rs  lib.rs  logger.rs  main.rs
tests/: integration.rs
(+184 files in other folders)
