[package]
name = "copilot-agent-util"
version = "1.4.0"
edition = "2021"
authors = ["jdfalk <jdfalk@users.noreply.github.com>"]
license = "MIT"
description = "Extremely safe centralized utility for Copilot/AI agent command execution"
homepage = "https://github.com/jdfalk/copilot-agent-util-rust"
repository = "https://github.com/jdfalk/copilot-agent-util-rust"
readme = "README.md"
keywords = ["cli", "copilot", "agent", "automation", "vscode"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "copilot-agent-util"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env", "color"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
which = "6.0"
regex = "1.10"
colored = "2.1"
indicatif = "0.17"
crossterm = "0.27"
shellexpand = "3.1"
env_logger = "0.10"
log = "0.4"
fs_extra = "1.3"
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.8"
# Unix utilities integration - using system commands with fallbacks
# uucore provides shared utilities for potential future native integration

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
debug = true
opt-level = 0

[[bench]]
name = "executor_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
